<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:samuel="http://schemas.android.com/apk/res/com.samuel.imooc_weichat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/id_tab_buttom_ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <com.samuel.imooc_weichat.ChangeColorIconTextView
            android:id="@+id/id_weichat"
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            samuel:icon="@drawable/ic_menu_start_conversation"
            samuel:text="@string/string_weichat"
            samuel:text_size="13sp" />

        <com.samuel.imooc_weichat.ChangeColorIconTextView
            android:id="@+id/id_contact"
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            samuel:icon="@drawable/ic_menu_friendslist"
            samuel:text="@string/string_friends"
            samuel:text_size="13sp" />

        <com.samuel.imooc_weichat.ChangeColorIconTextView
            android:id="@+id/id_found"
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            samuel:icon="@drawable/ic_menu_allfriends"
            samuel:text="@string/string_found"
            samuel:text_size="13sp" />

        <com.samuel.imooc_weichat.ChangeColorIconTextView
            android:id="@+id/id_me"
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            samuel:icon="@drawable/ic_menu_emoticons"
            samuel:text="@string/string_me"
            samuel:text_size="13sp" />
    </LinearLayout>

</LinearLayout>